# ImpersonatorDiscordBot

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md  triggers.json
src/: main.rs
