[package]
name = "discord-trigger-webhook-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serenity = { version = "0.12", default-features = false, features = [
  "cache",
  "client",
  "gateway",
  "http",
  "model",
  "rustls_backend",
] }
tokio = { version = "1", features = ["fs", "macros", "rt-multi-thread", "sync"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
